--- a/src/components/modules/home/HomeSpice/HomeSpice.module.scss
+++ b/src/components/modules/home/HomeSpice/HomeSpice.module.scss
@@ -1,3 +1,3 @@
 .homeSpiceWarpper{
-    margin: 5.6rem 0;
+    margin-bottom: 8rem;    
 }
